tests/errors/test_12.xpp
// No such function with name

fn foo() void {

}

fn main() void {
    foo();
    bar();
}